<resources>
    <string name="app_name">FireAlertBachmann</string>
    <string name="menu_nfcscan">Schlüssel Scannen</string>
    <string name="menu_peoplelist">Vermisste Mitarbeiter</string>
    <string name="menu_missingpeople">Vermisste Mitarbeiter</string>
    <string name="menu_foundpeople">Gefundene Mitarbeiter</string>
    <string name="menu_QR">QR-Code Scannen</string>

    <string name="snackbar_button">Go to Missing list of People</string>
    <string name="tutorialPage1ButtonText">Zu den Wlan Einstellungen</string>
    <string name="tutorialPage1Desc">Der erste Schritt der App wäre ein Wlan verbindung herzustellen falls dies schon der fall ist können sie diese Seite überspringen. \n\nWenn sie noch nicht mit dem Bachmann Wlan \"BMDATA-WLAN\" verbunden sind drücken sie auf den unteren Knopf um zu den Einstellungen zu gelangen und verbinden sie sich mit diesem.</string>
    <string name="tutorialPage1Header">Wlan Verbindung herstellen:</string>
    <string name="string_skip">Einführung Überspringen</string>
    <string name="string_nextStep">Nächster Schritt</string>
    <string name="string_dontShowAgain">Nicht mehr anzeigen</string>
    <string name="tutorialPage2Header">Schlüssel Scan durchführen:</string>
    <string name="tutorialPage2Desc">Um einen Schlüssel zu scannen und somit auch jemanden abzuhaken \"finden\" muss man auf der Schlüssel scannen Seiten den Knopf drücken und dann den Mitarbeiter Schlüssel an die rückseite des Handys halten bis ein Haken kommt danach könnte man auch noch andere Schlüssel scannen.\n\nWenn man alle gegebenen Schlüssel gescannt hat gehts zum nächsten Schritt.</string>
    <string name="string_PreviousStep">Vorheriger Schritt</string>
    <string name="tutorialPage3Header">Vermisste Personen händisch abhaken:</string>
    <string name="tutorialPage3Desc">Wenn alle Schlüssel gescannt wurden geht man auf die Vermisste Personen Seite, dort sieht man die übergeblieben Mitarbeit die noch nicht aus der Firma geflohen sind. \n\nFalls aber jemand Krank an diesem Tag ist dann kann man diesen MItarbeiter oben im Suchfeld mit dem Kürzel suchen und händisch auswählen und unten per Knopfdruck abhaken \"finden\".</string>
    <string name="tutorialPage4Desc">Auf der gefundenen Mitarbeiter Seite sieht man alle Mitarbeiter wo abgehakt wurden.\n\nBei jedem Mitarbeiter steht sein jeweiliges Kürzel und der Zeitpunkt wo er abgehakt \"gefunden\" wurde.</string>
    <string name="tutorialPage4Header">Gefundene Mitarbeiter Seite:</string>
</resources>