<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="402dp"
        android:layout_height="400dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="214dp"
        android:text="@string/tutorialPage4Desc"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tutorialPag4NextStep"
        android:layout_width="139dp"
        android:layout_height="28dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="28dp"
        android:text="@string/string_nextStep"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tutorialPage4PreviousStep" />

    <TextView
        android:id="@+id/tutorialPage4PreviousStep"
        android:layout_width="139dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/string_PreviousStep"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="400dp"
        android:layout_height="39dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="25dp"
        android:text="@string/tutorialPage4Header"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>