<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="401dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="25dp"
        android:text="@string/tutorialPage2Header"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="398dp"
        android:layout_height="366dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="197dp"
        android:text="@string/tutorialPage2Desc"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tutorialPage2NextStep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tutorialPage2NextStep"
        android:layout_width="139dp"
        android:layout_height="28dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="28dp"
        android:text="@string/string_nextStep"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tutorialPage2PreviousStep" />

    <TextView
        android:id="@+id/tutorialPage2PreviousStep"
        android:layout_width="139dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/string_PreviousStep"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>